--- a/src/screens/LandingScreen/LandingScreen.css
+++ b/src/screens/LandingScreen/LandingScreen.css
@@ -4,5 +4,5 @@ Navbar{
 
 #LandingScreen__container {
     overflow-x: hidden;
-    font-family: Neue Montreal;
+    font-family: NeueMontreal-Regular;
 }
