--- a/src/components/LandingScreen/Prizes/Prizes.css
+++ b/src/components/LandingScreen/Prizes/Prizes.css
@@ -12,11 +12,11 @@
 }
 .prizes-heading{
     font-size:2.8rem;
-    font-weight: 600;
+    font-family: NeueMontreal-Regular;
 }
 .prizes-content{
     font-size:1.4rem;
-    font-weight: normal;
+    font-family: NeueMontreal-Regular;
 }
 
 @media screen and (max-width : 500px) {
