--- a/src/components/LandingScreen/Sponsors/Sponsors.css
+++ b/src/components/LandingScreen/Sponsors/Sponsors.css
@@ -28,7 +28,7 @@
     margin-top : 60px;
     margin-bottom: 20px;
     font-size: 2.5rem;
-    font-weight : 600;
+    font-family: NeueMontreal-Regular;
     color : white;
     text-align: center;
     padding : 0 20px;
