href added to navbar

--- a/src/components/LandingScreen/Hero/Hero.css
+++ b/src/components/LandingScreen/Hero/Hero.css
@@ -5,6 +5,7 @@
     background-size: cover;
     overflow: hidden;
     font-family: NeueMontreal-Regular;
+    margin-top : -3px;
 }
 Row{
     height:100vh;
