--- a/src/components/LandingScreen/Faq/Faq.css
+++ b/src/components/LandingScreen/Faq/Faq.css
@@ -25,6 +25,7 @@
     outline:none;
 }
 .faq-question{
+    cursor: pointer;
     box-shadow: 0px 8px 24px rgba(239, 239, 239, 0.8);
     border-radius: 6px;
     padding:2vh;
