--- a/src/components/LandingScreen/Faq/Faq.css
+++ b/src/components/LandingScreen/Faq/Faq.css
@@ -59,6 +59,9 @@
 .faq-btn{
     background-color: transparent;
     border-color: transparent;
+    border : none ;
+    outline : none;
+    box-shadow: 0px 0px 0px 0px;
     margin: 6px 0;
 }
 #FAQs .btn {
@@ -66,6 +69,11 @@
     border : none ;
 }
 #FAQs .btn:focus {
+    outline : none !important;
+    border : none !important;
+    box-shadow: 0px 0px 0px 0px;
+}
+.faq-btn:focus {
     outline : none !important;
     border : none !important;
     box-shadow: 0px 0px 0px 0px;
