--- a/src/components/LandingScreen/Register/Register.css
+++ b/src/components/LandingScreen/Register/Register.css
@@ -29,6 +29,7 @@
     font-family: NeueMontreal-Regular;
     font-size: 0.95rem;
     width: 300px;
+    height : 50px;
     padding : 10px 5px;
     font-weight: 400;
     color : white;
