hero and navbar ui fix

--- a/src/components/LandingScreen/Navbar/Navbar.css
+++ b/src/components/LandingScreen/Navbar/Navbar.css
@@ -18,7 +18,11 @@
   flex-direction: row;
   padding: 0px;
 }
-
+@media screen and (max-width : 992px) {
+  #Navbar__container {
+    justify-content: space-between !important;
+  }
+}
 @media (max-width: 922px) {
   .NavLinks {
     font-family: NeueMontreal-Regular;
