--- a/src/components/LandingScreen/Faq/Faq.css
+++ b/src/components/LandingScreen/Faq/Faq.css
@@ -79,8 +79,8 @@
     box-shadow: 0px 0px 0px 0px;
 }
 .contact-btn{
-    background-color: black;
-    color:white;
+    background-color: white;
+    color:black;
     bottom:2px;
     font-weight: 600 !important;
     font-size: 1rem !important ;
