made design changes, changed theme screen ,transition speed changed

--- a/src/components/LandingScreen/Brand/Brand.css
+++ b/src/components/LandingScreen/Brand/Brand.css
@@ -11,9 +11,9 @@
     padding-top : 30px;
     padding-left : 50px;
     width:70vw;
-    font-weight: lighter;
+    font-weight: normal;
     font-size:1.6rem;
-    font-family: NeueMontreal-Light;
+    font-family: NeueMontreal-Regular;
 }
 .brand-head{
     font-size: 5rem;
