--- a/src/components/SupportPage/SupportPage.css
+++ b/src/components/SupportPage/SupportPage.css
@@ -1,157 +1,167 @@
 #SupportPage__container {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    width : 98%;
-    height : 100%;
-    overflow-y: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  width: 98%;
+  height: 100%;
+  overflow-y: auto;
 }
 
 #SupportPage__heading {
-    align-self: flex-start;
-    padding-left: 40px;
-    font-size: 1.1rem;
-    font-weight: normal;
+  align-self: flex-start;
+  padding-left: 40px;
+  font-size: 1.1rem;
+  font-weight: normal;
+  margin-top: 30px;
 }
 
 #SupportPage__helpcontainer {
-    display: flex;
-    flex-direction: row;
-    width : 550px;
-    align-items: center;
+  display: flex;
+  flex-direction: row;
+  width: 550px;
+  align-items: center;
 }
 
 #SupportPage__helpcontainer img {
-    width : 230px;
-    height : auto;
+  width: 230px;
+  height: auto;
 }
 
 #SupportPage__socialinfo {
-    display: flex;
-    flex-direction: column;
-    padding-bottom: 30px;
-    font-size: 1rem;
-    text-align: center;
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 30px;
+  font-size: 1rem;
+  text-align: center;
 }
 
-#SupportPage__socialicons{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+#SupportPage__socialicons {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 
 #SupportPage__socialicons img {
-    width : 26px;
-    margin : 0 10px;
-    transition: all .2s ease-in-out;
-    cursor: pointer;
+  width: 26px;
+  margin: 0 10px;
+  transition: all 0.2s ease-in-out;
+  cursor: pointer;
 }
 
 #SupportPage__helpinfo {
-    display : flex;
-    flex-direction: column;
-    justify-content: space-between;
-    margin-left: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-left: 20px;
 }
 
 #SupportPage__discordinfo {
-    margin-top : 25px;
-    display: flex;
-    flex-direction: column;
+  margin-top: 25px;
+  display: flex;
+  flex-direction: column;
 }
 #SupportPage__discordinfo p:nth-child(2) {
-    font-size: 0.85rem;
+  font-size: 0.85rem;
 }
 
 #SupportPage__socialicons img:hover {
-    transform: scale(1.05);
+  transform: scale(1.05);
 }
 
 #SupportPage__discordlink {
-    background-color: rgba(86, 58, 232, 1);
-    color : white;
-    width: fit-content;
-    text-align: center;
-    padding : 3px 15px;
-    border-radius: 6px;
-    cursor: pointer;
-    font-size: 1rem;
+  background-color: rgba(86, 58, 232, 1);
+  color: white;
+  width: fit-content;
+  text-align: center;
+  border-radius: 6px;
+  cursor: pointer;
+  font-size: 1rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 16px 24px;
+  margin-bottom: 0 !important;
 }
 
 #SupportPage__discordlink:hover {
-    box-shadow: 0px 0px 3px 1px rgba(86, 58, 232, 1);
+  box-shadow: 0px 0px 3px 1px rgba(86, 58, 232, 1);
 }
 
-@media screen and (max-width : 900px) {
-    #SupportPage__helpcontainer {
-        width : 400px;
-    }
-    #SupportPage__helpcontainer img {
-        width : 200px;
-    }
-    #SupportPage__helpinfo {
-        font-size: 0.975rem;
-    }
-    #SupportPage__discordlink {
-        padding : 2px 10px;
-        font-size: 0.855rem;
-    }
+.font_p {
+  font-family: "Inter", sans-serif;
 }
 
-@media screen and (max-width : 521px) {
-    #SupportPage__helpcontainer {
-        display: flex;
-        flex-direction: column;
-        width : 95%;
-        align-items: center;
-    }
-    #SupportPage__helpcontainer img {
-        width : 200px;
-    }
-    #SupportPage__helpinfo {
-        align-items: center;
-        font-size: 0.975rem;
-        text-align: center;
-        margin : 0;
-    }
-    #SupportPage__discordinfo {
-        align-items: center;
-        text-align: center;
-        margin-top: 5px;
-    }
-    #SupportPage__discordlink {
-        padding : 2px 10px;
-        font-size: 0.855rem;
-    }
-    #SupportPage__heading {
-        align-self: center;
-        padding-left: 0px;
-    }
+@media screen and (max-width: 900px) {
+  #SupportPage__helpcontainer {
+    width: 400px;
+  }
+  #SupportPage__helpcontainer img {
+    width: 200px;
+  }
+  #SupportPage__helpinfo {
+    font-size: 0.975rem;
+  }
+  #SupportPage__discordlink {
+    padding: 2px 10px;
+    font-size: 0.855rem;
+  }
 }
 
-@media screen and (max-height : 670px) {
-    #SupportPage__helpcontainer img {
-        width : 40vw;
-    }
-    #SupportPage__heading {
-        margin : 0 5px;
-    }
-    #SupportPage__helpinfo {
-        font-size: 0.9rem;
-    }
-    #SupportPage__discordlink {
-        padding : 2px 8px;
-        font-size: 0.8rem;
-    }
-    #SupportPage__discordinfo p:nth-child(2) {
-        font-size: 0.8rem;
-    }
-    #SupportPage__socialinfo {
-        padding-bottom: 10px;
-    }
-    #SupportPage__socialicons img {
-        width : 28px;
-        margin : 0 9px;
-    }
+@media screen and (max-width: 521px) {
+  #SupportPage__helpcontainer {
+    display: flex;
+    flex-direction: column;
+    width: 95%;
+    align-items: center;
+  }
+  #SupportPage__helpcontainer img {
+    width: 200px;
+  }
+  #SupportPage__helpinfo {
+    align-items: center;
+    font-size: 0.975rem;
+    text-align: center;
+    margin: 0;
+  }
+  #SupportPage__discordinfo {
+    align-items: center;
+    text-align: center;
+    margin-top: 5px;
+  }
+  #SupportPage__discordlink {
+    padding: 2px 10px;
+    font-size: 0.855rem;
+  }
+  #SupportPage__heading {
+    align-self: center;
+    padding-left: 0px;
+  }
+}
+
+@media screen and (max-height: 670px) {
+  #SupportPage__helpcontainer img {
+    width: 40vw;
+  }
+  #SupportPage__heading {
+    margin: 0 5px;
+  }
+  #SupportPage__helpinfo {
+    font-size: 0.9rem;
+  }
+  #SupportPage__discordlink {
+    padding: 2px 8px;
+    font-size: 0.8rem;
+  }
+  #SupportPage__discordinfo p:nth-child(2) {
+    font-size: 0.8rem;
+  }
+  #SupportPage__socialinfo {
+    padding-bottom: 10px;
+  }
+  #SupportPage__socialicons img {
+    width: 28px;
+    margin: 0 9px;
+  }
 }
