--- a/src/components/ResourceCollection/ResourceCollection.css
+++ b/src/components/ResourceCollection/ResourceCollection.css
@@ -1,20 +1,23 @@
 #ResourceCollection__container {
-    display : flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    width : 92%;
-    height : 40%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 93%;
+  height: 40%;
+  justify-content: center;
+  align-items: center;
+  margin-left: 25px;
 }
 
-@media screen and (max-width : 561px) {
-    #ResourceCollection__container {
-        height : max-content;
-    }
+@media screen and (max-width: 561px) {
+  #ResourceCollection__container {
+    height: max-content;
+  }
 }
-@media screen and (max-width : 423px) {
-    #ResourceCollection__container {
-        flex-direction: column;
-        align-items: center;
-        width  :100%;
-    }
+@media screen and (max-width: 423px) {
+  #ResourceCollection__container {
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  }
 }
