--- a/src/components/EventOverview/EventOverview.css
+++ b/src/components/EventOverview/EventOverview.css
@@ -17,7 +17,8 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  align-items: center;
+  /* align-items: center; */
+  margin-left: 25px;
 }
 
 #EventOverview__start {
@@ -117,7 +118,7 @@
 }
 
 #EventOverview__timeline {
-  height: 86%;
+  height: 90%;
   width: 90%;
   border-radius: 10px;
   padding: 0px 15px 10px 15px;
@@ -136,6 +137,7 @@
 @media screen and (max-width: 1200px) {
   #EventOverview__leftdiv {
     width: 60%;
+    align-items: center;
   }
   #EventOverview__rightdiv {
     width: 40%;
@@ -279,5 +281,20 @@
     font-size: 1.18rem;
     margin-top: 24px;
     margin-bottom: 24px;
+  }
+}
+
+@media screen and (max-height: 820px) {
+  #EventOverview__leftdiv {
+    margin-bottom: 100px;
+  }
+  #EventOverview__timeline {
+    height: 100%;
+  }
+}
+
+@media screen and (max-height: 900px) {
+  #EventOverview__timeline {
+    height: 95%;
   }
 }
